--- a/home.html
+++ b/home.html
@@ -46,7 +46,7 @@
         <div class="d-flex bd-highlight bg-light text-white">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3 col-sm-6 col-sx-12 segment-one">
+                    <div class="col-md-2">
                         <b>
                             <h6 class="h6" style="color: black;">POPULAR CATEGORIES</h6>
                         </b>
@@ -57,7 +57,7 @@
                             <a href="#">Mobile Phones</a> <br>
                         </ul>
                     </div>
-                    <div class="col-md-3 col-sm-6 col-sx-12 segment-two text-center">
+                    <div class="col-md-2">
                         <b>
                             <h6 class="h6" style="color: black;">TRENDING SEARCHES</h6>
                         </b>
@@ -68,7 +68,7 @@
                             <a href="#">Dogs</a> <br>
                         </ul>
                     </div>
-                    <div class="col-md-3 col-sm-6 col-sx-12 segment-three">
+                    <div class="col-md-2">
                         <b>
                             <h6 class="h6" style="color: black;">About Us</h6>
                         </b>
@@ -79,7 +79,7 @@
                             <a href="#">OLX for business</a> <br>
                         </ul>
                     </div>
-                    <div class="col-md-3 col-sm-6 col-sx-12 segment-four">
+                    <div class="col-md-2">
                         <b>
                             <h6 class="h6" style="color: black;">OLX</h6>
                         </b>
@@ -89,14 +89,12 @@
                             <a href="#">Legal & privacy information</a> <br>
                         </ul>
                     </div>
-                    <div class="col-md-3 col-sm-6 col-sx-12 segment-four">
+                    <div class="col-md-2">
                         <b>
                             <h6 class="h6" style="color: black;">FOLLOW US</h6>
                         </b>
                         <ul class="ul">
-                            <a href="#">Help</a> <br>
-                            <a href="#">SiteMap</a> <br>
-                            <a href="#">Legal & privacy information</a> <br>
+                            <i class=" fab fa-facebook">facebook</i>
                         </ul>
                     </div>
                 </div>
@@ -114,6 +112,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/fae989a614.js" crossorigin="anonymous"></script>
 
 </body>
 
