--- a/home.html
+++ b/home.html
@@ -97,7 +97,13 @@
                             <h6 class="h6" style="color: black;">FOLLOW US</h6>
                         </b>
                         <ul class="ul">
-                            <i class=" fab fa-facebook">facebook</i>
+                            <i class=" fab fa-facebook"></i>
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-instagram-square"></i>
+                        </ul>
+                        <ul>
+                            <img src="https://statics.olx.com.pk/external/base/img/appstore.webp" alt="">
+                            <img src="https://statics.olx.com.pk/external/base/img/playstore.webp" alt="">
                         </ul>
                     </div>
                 </div>
