--- a/home.html
+++ b/home.html
@@ -25,85 +25,70 @@
             </div>
         </div>
     </nav>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
+    <img class="top-image " src="https://tpc.googlesyndication.com/simgad/5417904088956663550 " alt=" ">
+
+    <br><br><br><br><br><br><br><br>
+
     <footer>
-        <div class="d-flex bd-highlight bg-light text-white">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-2">
+        <div class="d-flex bd-highlight bg-light text-white ">
+            <div class="container ">
+                <div class="row ">
+                    <div class="col-md-2 ">
                         <b>
-                            <h6 class="h6" style="color: black;">POPULAR CATEGORIES</h6>
+                            <h6 class="h6 " style="color: black; ">POPULAR CATEGORIES</h6>
                         </b>
-                        <ul class="ul">
-                            <a href="#">Cars</a> <br>
-                            <a href="#">Flates for rent</a> <br>
-                            <a href="#">Jobs</a> <br>
-                            <a href="#">Mobile Phones</a> <br>
+                        <ul class="ul ">
+                            <a href="# ">Cars</a> <br>
+                            <a href="# ">Flates for rent</a> <br>
+                            <a href="# ">Jobs</a> <br>
+                            <a href="# ">Mobile Phones</a> <br>
                         </ul>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-2 ">
                         <b>
-                            <h6 class="h6" style="color: black;">TRENDING SEARCHES</h6>
+                            <h6 class="h6 " style="color: black; ">TRENDING SEARCHES</h6>
                         </b>
-                        <ul class="ul">
-                            <a href="#">Bikes</a> <br>
-                            <a href="#">Watches</a> <br>
-                            <a href="#">Books</a> <br>
-                            <a href="#">Dogs</a> <br>
+                        <ul class="ul ">
+                            <a href="# ">Bikes</a> <br>
+                            <a href="# ">Watches</a> <br>
+                            <a href="# ">Books</a> <br>
+                            <a href="# ">Dogs</a> <br>
                         </ul>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-2 ">
                         <b>
-                            <h6 class="h6" style="color: black;">About Us</h6>
+                            <h6 class="h6 " style="color: black; ">About Us</h6>
                         </b>
-                        <ul class="ul">
-                            <a href="#">About OLX group</a> <br>
-                            <a href="#">OLX Blog</a> <br>
-                            <a href="#">Contact us</a> <br>
-                            <a href="#">OLX for business</a> <br>
+                        <ul class="ul ">
+                            <a href="# ">About OLX group</a> <br>
+                            <a href="# ">OLX Blog</a> <br>
+                            <a href="# ">Contact us</a> <br>
+                            <a href="# ">OLX for business</a> <br>
                         </ul>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-2 ">
                         <b>
-                            <h6 class="h6" style="color: black;">OLX</h6>
+                            <h6 class="h6 " style="color: black; ">OLX</h6>
                         </b>
-                        <ul class="ul">
-                            <a href="#">Help</a> <br>
-                            <a href="#">SiteMap</a> <br>
-                            <a href="#">Legal & privacy information</a> <br>
+                        <ul class="ul ">
+                            <a href="# ">Help</a> <br>
+                            <a href="# ">SiteMap</a> <br>
+                            <a href="# ">Legal & privacy information</a> <br>
                         </ul>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-2 ">
                         <b>
-                            <h6 class="h6" style="color: black;">FOLLOW US</h6>
+                            <h6 class="h6 " style="color: black; ">FOLLOW US</h6>
                         </b>
-                        <ul class="ul">
-                            <i class=" fab fa-facebook"></i>
-                            <i class="fab fa-twitter"></i>
-                            <i class="fab fa-instagram-square"></i>
+                        <ul class="ul ">
+                            <i class=" fab fa-facebook "></i>
+                            <i class="fab fa-twitter "></i>
+                            <i class="fab fa-instagram-square "></i>
                         </ul>
                         <ul>
-                            <img src="https://statics.olx.com.pk/external/base/img/appstore.webp" alt="">
-                            <img src="https://statics.olx.com.pk/external/base/img/playstore.webp" alt="">
+                            <img src="https://statics.olx.com.pk/external/base/img/appstore.webp " alt=" ">
+                            <img src="https://statics.olx.com.pk/external/base/img/playstore.webp " alt=" ">
                         </ul>
                     </div>
                 </div>
@@ -111,17 +96,17 @@
         </div>
     </footer>
 
-    <div class="d-flex bd-highlight bg-dark text-white footer" style="margin: o; padding: 0;">
-        <div class="p-1 flex-fill bd-highlight text-center" style="font-style:italic; font-size: 12px;">Other Countries India - South Africa - Indonesia</div>
-        <div class="p-1 flex-fill bd-highlight text-center" style="font-style:italic; font-size: 12px;">Free Classifieds in Pakistan. © 2006-2020 OLX
+    <div class="d-flex bd-highlight bg-dark text-white footer " style="margin: o; padding: 0; ">
+        <div class="p-1 flex-fill bd-highlight text-center " style="font-style:italic; font-size: 12px; ">Other Countries India - South Africa - Indonesia</div>
+        <div class="p-1 flex-fill bd-highlight text-center " style="font-style:italic; font-size: 12px; ">Free Classifieds in Pakistan. © 2006-2020 OLX
         </div>
     </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/fae989a614.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js " integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI " crossorigin="anonymous "></script>
+    <script src="https://kit.fontawesome.com/fae989a614.js " crossorigin="anonymous "></script>
 
 </body>
 
