--- a/home.html
+++ b/home.html
@@ -13,18 +13,23 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-light sticky-top">
         <div class="container">
             <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/OLX_New_Logo.png/220px-OLX_New_Logo.png">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto w-100 justify-content-end">
-                    <li class="nav-item active">
-
-                </ul>
-            </div>
+            </button>
+        </div>
         </div>
     </nav>
+
+    <div class="help">
+        <ul class="Top-ul">
+            <a class="Top" href="">ALL CATEGORIES</a>
+            <a class="Top" href="">Mobile Phone</a>
+            <a class="Top" href="">Cars</a>
+            <a class="Top" href="">Motorcycle</a>
+            <a class="Top" href="">Houses</a>
+            <a class="Top" href="">Tv-video-audio</a>
+            <a class="Top" href="">Tablets</a>
+            <a class="Top" href="">Land & Plots</a>
+        </ul>
+    </div>
 
     <img class="top-image " src="https://tpc.googlesyndication.com/simgad/5417904088956663550 " alt=" ">
 
