--- a/home.html
+++ b/home.html
@@ -12,8 +12,9 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-light sticky-top">
         <div class="container">
-            <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/OLX_New_Logo.png/220px-OLX_New_Logo.png">
-            </button>
+            <a href="home.html">
+                <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/OLX_New_Logo.png/220px-OLX_New_Logo.png">
+            </a>
         </div>
         </div>
     </nav>
