--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
     <br>
     <br>
 
-    <img class="top-image " src="https://tpc.googlesyndication.com/simgad/5417904088956663550 " alt=" ">
+    <img class="bottom-image " src="https://tpc.googlesyndication.com/simgad/5417904088956663550 " alt=" ">
 
     <footer>
         <div class="d-flex bd-highlight bg-light text-white ">
